sanjay - alignment issue

--- a/src/style_dashboard.css
+++ b/src/style_dashboard.css
@@ -3306,3 +3306,55 @@ button.btn-theme-dialog {
 .pagination-styles > li > span {
   color: #6e6e73;
 }
+.add-user-parent {
+  position: relative;
+}
+
+.add-user-parent .add-user-container {
+  position: absolute;
+  width: 250px;
+  height: max-content;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 0 1px 14px -2px rgb(0, 0, 0, 0.2);
+  top: 100%;
+  right: 0;
+  z-index: 10;
+}
+.add-user-container .search-text-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 25px;
+  border: none;
+  background-color: #f5f5f5;
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: 15px;
+  padding: 0 1rem 0 3rem;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23b9b9b9'%3E%3Cpath d='M19.023 16.977a35.13 35.13 0 01-1.367-1.384c-.372-.378-.596-.653-.596-.653l-2.8-1.337A6.962 6.962 0 0016 9c0-3.859-3.14-7-7-7S2 5.141 2 9s3.14 7 7 7c1.763 0 3.37-.66 4.603-1.739l1.337 2.8s.275.224.653.596c.387.363.896.854 1.384 1.367l1.358 1.392.604.646 2.121-2.121-.646-.604c-.379-.372-.885-.866-1.391-1.36zM9 14c-2.757 0-5-2.243-5-5s2.243-5 5-5 5 2.243 5 5-2.243 5-5 5z'/%3E%3C/svg%3E");
+}
+.add-user-container .user-list-contianer {
+}
+.add-user-container .user-list-contianer .user-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 14px;
+  padding-left: 20px;
+  background: whitesmoke;
+  margin-bottom: 4px;
+}
+.add-user-container .user-list-contianer .user-item .close-svg {
+  width: 20px;
+  fill: currentColor;
+  stroke: white;
+  color: #888 !important;
+}
+.add-user-container button {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  max-width: min-content !important;
+  min-width: min-content !important;
+  padding: 0 34px !important;
+  display: flex;
+  align-items: center;
+}
